[gd_scene load_steps=29 format=2]

[ext_resource path="res://sprites/player/adventurer-Sheet.png" type="Texture" id=1]
[ext_resource path="res://zones_boxes/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Memory.gd" type="Script" id=3]
[ext_resource path="res://whitening.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/fadescale = 3.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 23, 22 ]
}

[sub_resource type="Animation" id=4]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 18, 22 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/attack/node = SubResource( 7 )
states/attack/position = Vector2( 372, -16.2889 )
states/fall/node = SubResource( 8 )
states/fall/position = Vector2( 372, 182 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 372, 76 )
states/jump/node = SubResource( 10 )
states/jump/position = Vector2( 506, 182 )
states/run/node = SubResource( 11 )
states/run/position = Vector2( 506, 76 )
transitions = [ "idle", "jump", SubResource( 12 ), "idle", "run", SubResource( 13 ), "run", "jump", SubResource( 14 ), "jump", "fall", SubResource( 15 ), "fall", "idle", SubResource( 16 ), "run", "fall", SubResource( 17 ), "idle", "fall", SubResource( 18 ), "idle", "attack", SubResource( 19 ), "run", "attack", SubResource( 20 ), "attack", "idle", SubResource( 21 ), "run", "idle", SubResource( 22 ) ]
start_node = "idle"
graph_offset = Vector2( 0, -52.1769 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[node name="Memory" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
vframes = 11
hframes = 7
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 24 )

[node name="Delay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PositionTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" parent="hurtbox" index="0"]
polygon = PoolVector2Array( 0, -8, -8, 0, 0, 16, 8, 0, 0, -8 )
disabled = true
[connection signal="timeout" from="Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="PositionTimer" to="." method="_on_PositionTimer_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="hurtbox"]
